Service-common moved to microprofile and reactive. Refactored all usages. Initial switch to Níma in MP